@@ -68,9 +68,9 @@ jobs:
           perl-version: "latest"
           install-modules-with: cpanm
           install-modules-args: --verbose --notest --skip-satisfied
-          install-modules: Config::File File::BaseDir File::Rsync File::Touch File::Which IPC::Run Moo Test::Differences Test::File Test::Perl::Critic String::Random String::Expand Try::Tiny File::Slurper Devel::Cover::Report::Codecov
+          install-modules: Config::File File::BaseDir File::Rsync File::Touch File::Which IPC::Run Moo Test::Differences Test::File Test::Perl::Critic String::Random String::Expand Try::Tiny File::Slurper Devel::Cover::Report::Codecovbash
       - run: perl -V
       - name: Run coverage test and upload to CodeCov
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        run: make codecov
+        run: make codecovbash
